--- a/index.html
+++ b/index.html
@@ -3,6 +3,44 @@ layout: default
 
 paginate: true
 ---
+/* 为容器添加白色背景和红色外框 */
+.bg-overlay {
+  position: relative;
+  background-color: rgba(255, 255, 255, 0.8); /* 白色背景，带透明度 */
+  background-size: cover;
+  background-position: center;
+  border: 2px solid red; /* 红色外框 */
+  padding: 20px;
+  overflow: hidden;
+  border-radius: 10px; /* 可选：为外框添加圆角效果 */
+}
+
+/* 确保文字内容清晰 */
+.content {
+  position: relative;
+  z-index: 10;
+  color: #333; /* 黑色文字 */
+  font-size: 1.2rem;
+}
+    .pagination {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 2rem;
+      gap: 1rem;
+      font-weight: bold;
+    }
+    .pagination a {
+      color: #007BFF;
+      text-decoration: none;
+      padding: 0.5rem 1rem;
+      border: 1px solid #007BFF;
+      border-radius: 5px;
+    }
+    .pagination span {
+      color: #555;
+    }
+  </style>
 <h1>我的项目导航页</h1>
 
 <div class="section">
